# check-commit-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
checkpatch_hook/: __init__.py
checkpatch_hook/data/: checkpatch.yaml  spelling.txt
checkpatch_hook/scripts/: checkpatch.pl
tests/: test_config.py  test_hook.py
